-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.0 RC, 6.7
-
None
-
-
58796ac17 (dev), fa601afd5 (6.7), 5b2640540 (6.6)
Adding '-headersclean' configure argument for CI's Linux on Arm build config, it fails with warnings in corelib/global/qfloat16.h
/home/qt/work/qt/qtbase/src/corelib/global/qfloat16.h: In function ‘qfloat16::NativeType operator+(qfloat16, qfloat16::NativeType)’: /home/qt/work/qt/qtbase/src/corelib/global/qfloat16.h:178:31: error: conversion from ‘float’ to ‘qfloat16::NativeType’ {aka ‘__fp16’} may change value [-Werror=float-conversion] 178 | QF16_MAKE_ARITH_OP_FP(FP, +) \ | ^ /home/qt/work/qt/qtbase/src/corelib/global/qfloat16.h:172:95: note: in definition of macro ‘QF16_MAKE_ARITH_OP_FP’ 172 | friend inline FP operator OP(qfloat16 lhs, FP rhs) noexcept { return static_cast<FP>(lhs) OP rhs; } \ | ^~ /home/qt/work/qt/qtbase/src/corelib/global/qfloat16.h:191:5: note: in expansion of macro ‘QF16_MAKE_ARITH_OP’ 191 | QF16_MAKE_ARITH_OP(NativeType) | ^~~~~~~~~~~~~~~~~~ /home/qt/work/qt/qtbase/src/corelib/global/qfloat16.h: In function ‘qfloat16::NativeType operator+(qfloat16::NativeType, qfloat16)’: /home/qt/work/qt/qtbase/src/corelib/global/qfloat16.h:178:31: error: conversion from ‘float’ to ‘qfloat16::NativeType’ {aka ‘__fp16’} may change value [-Werror=float-conversion] 178 | QF16_MAKE_ARITH_OP_FP(FP, +) \ ...