qfloat16: further disable the -Wfloat-conversion warning

It shows up in our headersclean mode.

Fixes: QTBUG-123374
Change-Id: I6818d78a57394e37857bfffd17bcf9e350dc493c
Reviewed-by: Simo Fält <simo.falt@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 58796ac177cde3f558aec92c00e7ee8e174ba228)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit fa601afd5210106aa17f27ab29359f6a10610ba1)